--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.10"
 authors = [{ name = "owner", email = "owner@gmail.com" }]
 dependencies = [
-  "httpx>=0.27.0,<1.0.0",
-  "nonebot-plugin-alconna>=0.60.0,<1.0.0",    # 跨平台命令解析拓展
-  "nonebot-plugin-apscheduler>=0.5.0,<1.0.0", # 定时任务
-  "nonebot-plugin-localstore>=0.7.4,<1.0.0",  # 存储文件
-  "nonebot-plugin-uninfo>=0.10.0,<1.0.0",     # 多平台用户信息获取
+  # "httpx>=0.27.0,<1.0.0",
+  # "nonebot-plugin-alconna>=0.60.0,<1.0.0",    # 跨平台命令解析拓展
+  # "nonebot-plugin-apscheduler>=0.5.0,<1.0.0", # 定时任务
+  # "nonebot-plugin-localstore>=0.7.4,<1.0.0",  # 存储文件
+  # "nonebot-plugin-uninfo>=0.10.0,<1.0.0",     # 多平台用户信息获取
+  # "nonebot-adapter-onebot>=2.4.6,<3.0.0",
   "nonebot2>=2.4.3,<3.0.0",
+
 ]
 
 [project.urls]
@@ -21,9 +23,9 @@ Repository = "https://github.com/owner/nonebot-plugin-template.git"
 
 [dependency-groups]
 dev = [
-  "bump-my-version>=1.2.4",
+  "commitizen>=4.1.0",
   "nonebot2[fastapi]>=2.4.2,<3.0.0",
-  "poethepoet>=0.36.0",
+  "prek>=0.2.0",
   "ruff>=0.14.8,<1.0.0",
   { include-group = "test" },
 ]
@@ -31,7 +33,6 @@ test = [
   "nonebot-adapter-onebot>=2.4.6,<3.0.0",
   "nonebot2[fastapi]>=2.4.2,<3.0.0",
   "nonebug>=0.3.7,<1.0.0",
-  "poethepoet>=0.36.0",
   "pytest-asyncio>=1.3.0,<1.4.0",
   "pytest-cov>=7.0.0",
   "pytest-xdist>=3.8.0,<4.0.0",
@@ -41,19 +42,14 @@ test = [
 requires = ["uv_build>=0.9.2,<0.10.0"]
 build-backend = "uv_build"
 
-[tool.uv.sources]
-nonebug = { git = "https://github.com/nonebot/nonebug" }
-
-[tool.bumpversion]
-current_version = "0.1.0"
-commit = true
-message = "release: bump vesion from {current_version} to {new_version}"
-tag = true
-
-[[tool.bumpversion.files]]
-filename = "uv.lock"
-search = "name = \"nonebot-plugin-template\"\nversion = \"{current_version}\""
-replace = "name = \"nonebot-plugin-template\"\nversion = \"{new_version}\""
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "0.1.0"
+tag_format = "v$version"
+version_files = ["pyproject.toml:^version"]
+update_changelog_on_bump = true
+changelog_file = "CHANGELOG.md"
+major_version_zero = true
 
 [tool.coverage.report]
 exclude_lines = [
@@ -65,11 +61,6 @@ exclude_lines = [
 
 [tool.nonebot]
 plugins = ["nonebot_plugin_template"]
-
-[tool.poe.tasks]
-test = "pytest --cov=src --cov-report xml --junitxml=./junit.xml -n auto"
-bump = "bump-my-version bump"
-show-bump = "bump-my-version show-bump"
 
 [tool.pyright]
 pythonVersion = "3.10"
