--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,6 @@ on:
       - ".github/workflows/**"
 
 jobs:
-  typos:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-      - uses: crate-ci/typos@master
-
   basedpyright:
     name: BasedPyright
     runs-on: ubuntu-latest
@@ -76,7 +70,7 @@ jobs:
         run: uv sync --locked
 
       - name: Run Pytest
-        run: uv run poe test
+        run: uv run pytest --cov=src --cov-report xml --junitxml=./junit.xml -n auto
 
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
