ci: 迁移主分支到 main 并优化发布流程
将默认分支从 master 变更为 main，并同步更新 CI 工作流、文档及配置文件。
移除 release-drafter，引入 git-cliff 以实现自动化生成变更日志。
更新发布工作流，改用 action-gh-release 处理 GitHub Release 的创建与附件上传。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - "src/**"
@@ -27,7 +27,7 @@ jobs:
           version: "latest"
 
       - name: Install Dependencies
-        run: uv sync --locked
+        run: uv sync
 
       - name: Static typing check
         run: uvx basedpyright
