--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ Repository = "https://github.com/owner/nonebot-plugin-template.git"
 [dependency-groups]
 dev = [
   "commitizen>=4.1.0",
+  "git-cliff>=2.11.0,<3.0.0",
   "nonebot2[fastapi]>=2.4.2,<3.0.0",
   "prek>=0.2.0",
   "ruff>=0.14.8,<1.0.0",
