ci: 添加 Ruff 检查并更新 CI 环境配置
在 CI 工作流中集成 Ruff 代码检查与格式化校验，提升自动化代码质量管控。
统一 CI 任务中的 Python 版本为 3.10，确保运行环境的一致性。
移除 pre-commit 中的 uv-lock 钩子，简化本地提交流程并避免不必要的依赖锁定冲突。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,25 @@ on:
       - ".github/workflows/**"
 
 jobs:
+  ruff:
+    name: Ruff
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+          python-version: 3.10
+          version: latest
+
+      - name: Ruff check
+        run: uvx ruff check .
+
+      - name: Ruff format check
+        run: uvx ruff format --check .
+
   basedpyright:
     name: BasedPyright
     runs-on: ubuntu-latest
@@ -23,7 +42,7 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
-          python-version: 3.12
+          python-version: 3.10
           version: "latest"
 
       - name: Install Dependencies
