ci: 为 Ruff 和 BasedPyright 添加 UV_PYTHON 环境变量

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
   ruff:
     name: Ruff
     runs-on: ubuntu-latest
+    env:
+      UV_PYTHON: 3.10
     steps:
       - uses: actions/checkout@v6
 
@@ -35,6 +37,8 @@ jobs:
   basedpyright:
     name: BasedPyright
     runs-on: ubuntu-latest
+    env:
+      UV_PYTHON: 3.10
     steps:
       - uses: actions/checkout@v6
 
