--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,6 @@ jobs:
   ruff:
     name: Ruff
     runs-on: ubuntu-latest
-    env:
-      UV_PYTHON: 3.10
     steps:
       - uses: actions/checkout@v6
 
@@ -25,24 +23,18 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
-          python-version: 3.10
+          python-version: "3.10"
           version: latest
 
       - name: Ruff check
         run: uvx ruff check .
-        env:
-          UV_PYTHON: 3.10
 
       - name: Ruff format check
         run: uvx ruff format --check .
-        env:
-          UV_PYTHON: 3.10
 
   basedpyright:
     name: BasedPyright
     runs-on: ubuntu-latest
-    env:
-      UV_PYTHON: 3.10
     steps:
       - uses: actions/checkout@v6
 
@@ -50,18 +42,14 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
-          python-version: 3.10
+          python-version: "3.10"
           version: "latest"
 
       - name: Install Dependencies
         run: uv sync
-        env:
-          UV_PYTHON: 3.10
 
       - name: Static typing check
         run: uvx basedpyright
-        env:
-          UV_PYTHON: 3.10
 
   test:
     name: Coverage
@@ -99,13 +87,9 @@ jobs:
 
       - name: Install Dependencies
         run: uv sync
-        env:
-          UV_PYTHON: ${{ matrix.python-version }}
 
       - name: Run Pytest
         run: uv run pytest --cov=src --cov-report xml --junitxml=./junit.xml -n auto
-        env:
-          UV_PYTHON: ${{ matrix.python-version }}
 
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
