--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-default_install_hook_types: [pre-commit, commit-msg, pre-push]
+default_install_hook_types: [pre-commit, commit-msg]
 ci:
   autofix_commit_msg: ":rotating_light: auto fix by pre-commit hooks"
   autofix_prs: true
@@ -22,7 +22,7 @@ repos:
     rev: v0.14.8
     hooks:
       - id: ruff-check
-        args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix]
         stages: [pre-commit]
       - id: ruff-format
         stages: [pre-commit]
@@ -32,9 +32,3 @@ repos:
     hooks:
       - id: commitizen
         stages: [commit-msg]
-
-  - repo: https://github.com/DetachHead/basedpyright-prek-mirror
-    rev: 1.36.2
-    hooks:
-      - id: basedpyright
-        stages: [pre-push]
