ci: 添加模板同步工作流并优化 CI 输出
添加自动化模板同步工作流，支持定期从上游仓库拉取更新并自动创建 PR。
配置同步忽略名单以保护关键项目文件不被覆盖。
改进 CI 流程中的 Ruff 检查输出格式，使其更好地集成在 GitHub Actions 界面中。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           version: latest
 
       - name: Ruff check
-        run: uvx ruff check .
+        run: uvx ruff check --output-format=github .
 
       - name: Ruff format check
         run: uvx ruff format --check .
