feat: Add initial testing infrastructure with pytest and mock OneBot V11 events, and update pre-commit hooks and changelog generation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dev = [
   "commitizen>=4.1.0",
   "git-cliff>=2.11.0,<3.0.0",
   "prek>=0.2.0",
-  "ruff>=0.14.8,<1.0.0",
+  "ruff>=0.14.13,<1.0.0",
   { include-group = "test" },
 ]
 test = [
@@ -62,11 +62,18 @@ exclude_lines = [
 plugins = ["nonebot_plugin_template"]
 
 [tool.pyright]
-include = ["src", "tests"]
-pythonVersion = "3.10"
-pythonPlatform = "All"
+include = ["src", "tests"] # 要检查的目录
+pythonVersion = "3.10"     # 目标 Python 版本（影响可用的类型特性）
+pythonPlatform = "All"     # 目标平台：All | Linux | Windows | Darwin
+# typeCheckingMode 类型检查严格程度，可选值：
+#   - "off"：      关闭类型检查
+#   - "basic"：    基础检查（仅报告明确的类型错误）
+#   - "standard"： 标准检查（推荐，平衡严格性与实用性）
+#   - "strict"：   严格检查（要求完整的类型注解，适合新项目）
+#   - "all"：      最严格（启用所有检查，可能产生大量警告）
 typeCheckingMode = "standard"
 
+# 测试目录的特殊配置（放宽部分规则以适应测试场景）
 [[tool.pyright.executionEnvironments]]
 root = "tests"
 reportPrivateUsage = "none"      # 允许测试访问私有属性 (_variable)
@@ -74,53 +81,51 @@ reportUnknownMemberType = "none" # 允许 Mock 对象等动态类型
 
 [tool.pytest]
 addopts = [
-  "--import-mode=importlib", # 导入模式（import mode）
-  "--strict-markers",        # 严格标记模式（strict markers mode）
-  "--tb=short",              # 简短的错误回溯（short traceback）
-  "-ra",                     # 显示所有测试结果摘要（show all test results summary）
+  "--import-mode=importlib", # 使用 importlib 导入模式（推荐，避免 sys.path 污染）
+  "--strict-markers",        # 严格标记模式（未注册的 marker 会报错）
+  "--tb=short",              # 简短的错误回溯（减少输出噪音）
+  "-ra",                     # 显示所有非通过测试的摘要（a=all except passed）
 ]
-pythonpath = ["src", "tests"]  # 确保 tests 目录被识别为包
-asyncio_mode = "auto" # 自动检测异步测试
-asyncio_default_fixture_loop_scope = "function" # 异步 fixture 的事件循环作用域
+pythonpath = ["src", "tests"] # 添加到 Python 路径，确保模块可导入
+asyncio_mode = "auto" # 自动检测异步测试函数，无需手动标记 @pytest.mark.asyncio
+asyncio_default_fixture_loop_scope = "function" # 每个测试函数使用独立的事件循环
 
 [tool.ruff]
-line-length = 88
-src = ["src", "tests"]  # 源代码目录（自动识别其中的模块为本地模块）
+line-length = 88       # 每行最大字符数（与 Black 保持一致）
+src = ["src", "tests"] # 源代码目录（用于判断导入是本地模块还是第三方模块）
 
 [tool.ruff.format]
-line-ending = "lf"
+line-ending = "lf" # 行尾符：lf（Unix）| crlf（Windows）| auto | native
 
 [tool.ruff.lint]
+# 启用的规则集，每个字母代码对应一组规则
 select = [
-  "F",     # Pyflakes（Pyflakes 基础检查）
-  "W",     # pycodestyle warnings（pycodestyle 警告）
-  "E",     # pycodestyle errors（pycodestyle 错误）
-  "I",     # isort（导入排序）
-  "B",     # flake8-bugbear (发现潜在 bug)
-  "UP",    # pyupgrade（Python 版本升级语法）
-  "ASYNC", # flake8-async（异步代码检查）
-  "C4",    # flake8-comprehensions（推导式优化）
-  "T10",   # flake8-debugger（调试器检查）
-  "T20",   # flake8-print（print 语句检查）
-  "PYI",   # flake8-pyi（类型存根文件检查）
-  "PT",    # flake8-pytest-style（pytest 风格检查）
-  "Q",     # flake8-quotes（引号风格检查）
-  "TID",   # flake8-tidy-imports（导入整理）
-  "RUF",   # Ruff-specific rules（Ruff 特定规则）
+  "F",     # Pyflakes：基础语法和逻辑错误检查
+  "W",     # pycodestyle warnings：PEP 8 风格警告
+  "E",     # pycodestyle errors：PEP 8 风格错误
+  "I",     # isort：导入语句排序
+  "B",     # flake8-bugbear：发现潜在 bug 和设计问题
+  "UP",    # pyupgrade：升级到新版 Python 语法
+  "ASYNC", # flake8-async：异步代码最佳实践
+  "C4",    # flake8-comprehensions：推导式优化建议
+  "T10",   # flake8-debugger：检测遗留的调试器语句（如 pdb）
+  "T20",   # flake8-print：检测 print 语句（生产代码应使用 logging）
+  "PYI",   # flake8-pyi：类型存根文件（.pyi）规范检查
+  "PT",    # flake8-pytest-style：pytest 代码风格检查
+  "Q",     # flake8-quotes：引号使用规范
+  "TID",   # flake8-tidy-imports：导入语句整理
+  "RUF",   # Ruff-specific：Ruff 特有的规则
 ]
+# 忽略的规则（根据项目需求放宽）
 ignore = [
-  "E402",   # module-import-not-at-top-of-file（模块导入不在文件顶部）
-  "UP037",  # quoted-annotation（引号类型注解）
-  "RUF001", # ambiguous-unicode-character-string（字符串中的歧义 Unicode 字符）
-  "RUF002", # ambiguous-unicode-character-docstring（文档字符串中的歧义 Unicode 字符）
-  "RUF003", # ambiguous-unicode-character-comment（注释中的歧义 Unicode 字符）
-  "W191",   # indentation contains tabs（缩进包含制表符）
-  "TID252", # relative-import（相对导入）
+  "E402",   # 允许模块导入不在文件顶部（某些情况下需要先执行代码）
+  "UP037",  # 允许使用引号包裹的类型注解（前向引用）
+  "RUF001", # 允许字符串中的中文等 Unicode 字符
+  "RUF002", # 允许文档字符串中的中文等 Unicode 字符
+  "RUF003", # 允许注释中的中文等 Unicode 字符
+  "W191",   # 允许使用制表符缩进
+  "TID252", # 允许使用相对导入
 ]
 
 [tool.ruff.lint.isort]
-length-sort = true                             # 按长度排序导入
-extra-standard-library = ["typing_extensions"] # 额外的标准库模块
-
-[tool.ruff.lint.pyupgrade]
-keep-runtime-typing = true # 保留运行时类型
+extra-standard-library = ["typing_extensions"] # 将 typing_extensions 视为标准库
