--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,12 @@ test = [
   "pytest-xdist>=3.8.0,<4.0.0",
 ]
 
+[tool.nonebot]
+plugins = ["nonebot_plugin_template"]
+adapters = [
+  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
+]
+
 [build-system]
 requires = ["uv_build>=0.9.2,<0.10.0"]
 build-backend = "uv_build"
@@ -57,9 +63,6 @@ exclude_lines = [
   "@overload",
   "except ImportError:",
 ]
-
-[tool.nonebot]
-plugins = ["nonebot_plugin_template"]
 
 [tool.pyright]
 include = ["src", "tests"] # 要检查的目录
