--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dev = [
 ]
 test = [
   "nonebot-adapter-onebot>=2.4.6,<3.0.0",
-  "nonebot2[fastapi]>=2.4.3,<3.0.0",
+  "nonebot2[fastapi]>=2.4.4,<3.0.0",
   "nonebug>=0.4.3,<1.0.0",
   "pytest-asyncio>=1.3.0,<1.4.0",
   "pytest-cov>=7.0.0",
@@ -120,6 +120,7 @@ select = [
 ]
 # 忽略的规则（根据项目需求放宽）
 ignore = [
+  "E501",   # 行长度由 formatter 控制，lint 不重复检查
   "E402",   # 允许模块导入不在文件顶部（某些情况下需要先执行代码）
   "UP037",  # 允许使用引号包裹的类型注解（前向引用）
   "RUF001", # 允许字符串中的中文等 Unicode 字符
@@ -127,6 +128,7 @@ ignore = [
   "RUF003", # 允许注释中的中文等 Unicode 字符
   "W191",   # 允许使用制表符缩进
   "TID252", # 允许使用相对导入
+  "B008",   # 允许在函数参数默认值中使用函数调用
 ]
 
 [tool.ruff.lint.isort]
