--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
-          python-version: "3.10"
+          python-version: "3.11"
           version: latest
 
       - name: Ruff check
@@ -41,7 +41,7 @@ jobs:
         uses: astral-sh/setup-uv@v7
         with:
           enable-cache: true
-          python-version: "3.10"
+          python-version: "3.11"
           version: "latest"
 
       - name: Install Dependencies
@@ -65,9 +65,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
+        python-version: ["3.11", "3.12", "3.13", "3.14"]
         # os: [ubuntu-latest, windows-latest, macos-latest]
         # pydantic-version: ["v1", "v2"]
+
+    # Python 3.14 实验性支持，允许失败
+    continue-on-error: ${{ matrix.python-version == '3.14' }}
 
     env:
       # OS: ${{ matrix.os }}
