--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          name: ${{ github.event.repository.name }} ${{ steps.version.outputs.TAG_NAME }}
           body: ${{ steps.changelog.outputs.content }}
           files: |
             dist/*.tar.gz
