--- a/.github/workflows/template-sync.yml
+++ b/.github/workflows/template-sync.yml
@@ -27,4 +27,5 @@ jobs:
           source_repo_path: Misty02600/nonebot-plugin-template
           upstream_branch: main
           pr_labels: template_sync
+          is_pr_cleanup: true
           git_remote_pull_params: "--allow-unrelated-histories --squash"
