chore: exclude project-specific files from template sync

--- a/.github/.templatesyncignore
+++ b/.github/.templatesyncignore
@@ -1,11 +1,11 @@
-# 白名单：允许同步的文件/目录（git pathspec 的 :! 语法）
+# 白名单：允许同步的文件/目录（:! 表示取消忽略，即允许同步）
 :!.github/**
 :!.pre-commit-config.yaml
 :!justfile
-:!pyproject.toml
 :!.gitignore
 :!cliff.toml
 
 # 其余全部不同步
 *
 .github/workflows/initialize.yml
+
